# SynthPanel

./: .dockerignore  .env.example  .gitignore  0.3.0-VISION.md  0.4.0-VISION.md  0.5.0-ARCHITECTURE-REVIEW.md  0.5.0-VISION.md  ARCHITECTURE-REVIEW-030.md  ARCHITECTURE-REVIEW-040.md  ARCHITECTURE-REVIEW.md  AUDIT-REPORT.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPO-VISION.md  Dockerfile  EXECUTION-PLAN-030.md  EXECUTION-PLAN-040.md  EXECUTION-PLAN-050.md  EXECUTION-PLAN.md  PRODUCT-PLAN.md  README.md  SECURITY.md  SPEC.md  gastown-rig-settings.example.json  glama.json  manifest  pyproject.toml  renovate.json  server.json
.claude-plugin/: plugin.json
.devcontainer/: devcontainer.json  postCreateCommand.sh  postStartCommand.sh
.github/: CODEOWNERS  FUNDING.yml  labels.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: access_request.yml  adapter_proposal.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-grant-access.yml  auto-tag.yml  ci.yml  codeql.yml  dependency-review.yml  docker.yml  publish-test.yml  publish.yml
docs/: RELEASING.md  adapter-guide.md  agent-discovery-audit.md  agent-integration-landscape.md  agent-skills.md  ai-engineer-readiness.md  calibration.md  cloudflare-pages-setup.md  composio-submission.md  convergence.md  distribution-and-pitch.md  ensemble.md  external-contributor-safety-audit-2026-04-15.md  mcp.md  methodology.md  migration-v1.md  oauth-discovery.md  recommended-models.md  registry-submissions.md  registry.md  release-audit-2026-04-15.md  reproducibility.md  response-contract.md  site-audit-2026-04-30.md  stability.md  synthbench-integration.md  traitprint-local-signoff.md  vscode-extension-decision.md
docs/blog/: synthpanel-vs-commercial-alternatives.md
docs/cookbook/: Synthetic_Focus_Group_With_SynthPanel.ipynb  instrument-regression-testing.md
examples/: README.md  concept-test-ab.yaml  multi-round-study.yaml  personas.yaml  pricing-segmentation-study.yaml  sdk_usage.py  survey.yaml
examples/consumer-name-test/: README.md  instrument.yaml  personas.yaml
examples/devtools-pricing/: README.md  instrument.yaml  personas.yaml
examples/instruments/: general_survey.yaml  market_research.yaml  product_feedback.yaml
examples/integrations/: README.md  composio_crewai.py  composio_langchain.py  crewai_tool.py  langchain_tool.py  llamaindex_tool.py  microsoft_agent.py  n8n_workflow.json  openai_agents.py
examples/saas-onboarding-friction/: README.md  instrument.yaml  personas.yaml
scripts/: check_site_cli_sync.py  render_agent_skills.py  render_site.py  render_site_markdown.py
site/: _headers  _worker.js  cli-coverage.txt  generate-og-image.py  index.html  index.html.j2  index.md  robots.txt  sitemap.xml  webmcp.js
site/.well-known/: api-catalog  oauth-protected-resource
site/.well-known/agent-skills/: index.json
site/.well-known/mcp/: server-card.json
site/blog/: synthpanel-vs-commercial-alternatives.html  synthpanel-vs-commercial-alternatives.md
site/docs/calibration/: index.html  index.md
site/docs/panel-run/: index.html  index.md
site/mcp/: index.html  index.md
site/recommended-models/: index.html  index.md
skills/focus-group/: SKILL.md
specs/sp-inline-calibration/: questions.md  research-map.md
specs/sp-inline-calibration/research/: instrument-dataset-coverage.md  synthbench-flow-map.md
specs/sp-pack-registry/: questions.md  research-map.md
specs/sp-pack-registry/research/: authoring-friction-evidence.md  pack-lifecycle-and-delivery.md  python-ecosystem-patterns.md
specs/sp-viz-layer/: questions.md  research-map.md
specs/sp-viz-layer/research/: adjacent-oss-landscape.md  cli-rendering-primitives.md  panel-json-schema.md
src/synth_panel/: __init__.py  __main__.py  _runners.py  aggregation.py  analyze.py  calibration.py  checkpoint.py  conditions.py  convergence.py  cost.py  cost_summary.py  credentials.py  diff.py  domains.py  ensemble.py  instrument.py  logging_config.py  main.py  metadata.py  metadata_migrations.py  orchestrator.py  pack_diff.py  persistence.py  perturbation.py  profiles.py  prompts.py  question_budget.py  routing.py  runtime.py  sdk.py  stats.py  synthbench.py  synthbench_submit.py  synthesis.py  templates.py  text_width.py
src/synth_panel/agent_assets/: __init__.py
src/synth_panel/analysis/: __init__.py  distribution.py  inspect.py  subgroup.py  subgroup_cli.py
src/synth_panel/cli/: commands.py  output.py  parser.py  progress.py  repl.py  slash.py
src/synth_panel/integrations/: __init__.py  composio.py
src/synth_panel/llm/: __init__.py  aliases.py  client.py  errors.py  models.py  retry.py
src/synth_panel/mcp/: __init__.py  compat.py  data.py  sampling.py  server.py
src/synth_panel/packs/: __init__.py  ai-eval-buyers.yaml  developer.yaml  enterprise-buyer.yaml  general-consumer.yaml  healthcare-patient.yaml  job-seekers.yaml  (+4 more)
tests/: conftest.py  test_abort_paths.py  test_acceptance.py  test_agent_skills_index.py  test_aggregation.py  test_aliases.py  test_analysis_pipeline.py  test_analyze.py  test_analyze_subgroup.py  test_calibration.py  test_checkpoint.py  test_claude_plugin_assets.py  test_cli.py  test_cli_auth.py  test_cli_report.py  test_client.py  test_compat_matrix.py  test_conditions.py  test_convergence_metric.py  test_cost.py  test_cost_gate.py  test_cost_summary.py  test_credentials.py  test_domains.py  test_ensemble.py  test_errors.py  test_inspect.py  test_install_skills.py  test_instrument.py  test_integrations_composio.py  test_jinja2_prompts.py  test_logging_config.py  test_mcp_compat_grace.py  test_mcp_data.py  test_mcp_sampling.py  test_mcp_server.py  test_mcp_stdio_sampling.py  test_metadata.py  test_models.py  test_orchestrator.py  (+47 more)
tests/acceptance/: test_registry_live.py
tests/mcp/: test_decision_field_request.py  test_response_gate.py
tests/orchestrator/: test_flag_raising.py
tests/persistence/: test_transcript_stamp.py
tests/schemas/: test_v1_0_0_load.py
tests/structured/: test_drift_contract.py  test_validate_envelope.py  test_verdict_shape.py
(+54 files in other folders)
