[project]
name = "synth-panel"
version = "0.4.0"
description = "Run synthetic focus groups and user research panels using AI personas. CLI tool, Python library, any LLM."
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "DataViking", email = "openclaw@dataviking.tech"}]
readme = "README.md"
keywords = ["llm", "research", "focus-group", "synthetic", "personas", "user-research", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "importlib_resources>=5.0; python_version < '3.9'",
]

[project.urls]
Homepage = "https://github.com/DataViking-Tech/synth-panel"
Repository = "https://github.com/DataViking-Tech/synth-panel"
Issues = "https://github.com/DataViking-Tech/synth-panel/issues"
Changelog = "https://github.com/DataViking-Tech/synth-panel/releases"

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pip-audit>=2.7",
]

[project.scripts]
synth-panel = "synth_panel.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"synth_panel.packs" = ["*.yaml"]
"synth_panel.packs.instruments" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not acceptance' --cov=synth_panel --cov-report=term-missing --cov-fail-under=80"
markers = [
    "acceptance: live API acceptance tests (require ANTHROPIC_API_KEY)",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line length (handled by formatter)
    "SIM108", # ternary operator (readability preference)
    "RUF003", # ambiguous unicode in comments (intentional)
    "RUF012", # mutable class default (dataclass fields)
    "B905",   # zip-without-explicit-strict (compat with Python <3.10)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "E402",   # module-level imports after env setup
    "B017",   # assert blind exception in tests
    "RUF043", # pytest.raises ambiguous pattern
]

[tool.ruff.lint.isort]
known-first-party = ["synth_panel"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true
files = ["src/synth_panel"]
disable_error_code = [
    "import-untyped",
    "no-any-return",
    "union-attr",
    "arg-type",
    "return-value",
    "assignment",
    "var-annotated",
]
