[project]
name = "synthpanel"
version = "0.9.1"
description = "Run synthetic focus groups using AI personas, with an MCP server for Claude Code / Cursor / Windsurf. CLI tool, Python library, any LLM."
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "DataViking", email = "openclaw@dataviking.tech"}]
readme = "README.md"
keywords = ["llm", "research", "focus-group", "synthetic", "personas", "user-research", "ai", "mcp", "model-context-protocol", "agent", "claude", "claude-code", "cursor", "windsurf", "survey-research", "synthetic-respondents", "market-research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://synthpanel.dev"
Documentation = "https://synthpanel.dev"
Repository = "https://github.com/DataViking-Tech/SynthPanel"
Issues = "https://github.com/DataViking-Tech/SynthPanel/issues"
Changelog = "https://github.com/DataViking-Tech/SynthPanel/releases"
"MCP Reference" = "https://github.com/DataViking-Tech/SynthPanel/blob/main/docs/mcp.md"

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
]
composio = [
    "composio>=0.5",
    "pydantic>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pip-audit>=2.7",
]

[project.scripts]
synthpanel = "synth_panel.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"synth_panel.packs" = ["*.yaml"]
"synth_panel.packs.instruments" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not acceptance' --cov=synth_panel --cov-report=term-missing --cov-fail-under=80"
markers = [
    "acceptance: live API acceptance tests (require ANTHROPIC_API_KEY)",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line length (handled by formatter)
    "SIM108", # ternary operator (readability preference)
    "RUF003", # ambiguous unicode in comments (intentional)
    "RUF012", # mutable class default (dataclass fields)
    "B905",   # zip-without-explicit-strict (compat with Python <3.10)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "E402",   # module-level imports after env setup
    "B017",   # assert blind exception in tests
    "RUF043", # pytest.raises ambiguous pattern
]

[tool.ruff.lint.isort]
known-first-party = ["synth_panel"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
files = ["src/synth_panel"]
disable_error_code = [
    "import-untyped",
    "no-any-return",
    "union-attr",
    "arg-type",
    "return-value",
    "assignment",
    "var-annotated",
]
